--- a/AutoTyperGUI/AutoTyperGUI.csproj
+++ b/AutoTyperGUI/AutoTyperGUI.csproj
@@ -46,20 +46,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AutoTyper.cs" />
-    <Compile Include="Chunk.cs" />
-    <Compile Include="KeyboardHook.cs" />
-    <Compile Include="ConfigurationWindow.cs">
+    <Compile Include="Model\AutoTyper.cs" />
+    <Compile Include="Model\Chunk.cs" />
+    <Compile Include="Model\KeyboardHook\KeyboardHook.cs" />
+    <Compile Include="View\ConfigurationWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ConfigurationWindow.Designer.cs">
+    <Compile Include="View\ConfigurationWindow.Designer.cs">
       <DependentUpon>ConfigurationWindow.cs</DependentUpon>
     </Compile>
-    <Compile Include="AutoTyperApplicationContext.cs" />
+    <Compile Include="View\AutoTyperApplicationContext.cs" />
+    <Compile Include="Model\KeyboardHook\ModifierKeys.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="AutoTypeSettings.cs" />
-    <EmbeddedResource Include="ConfigurationWindow.resx">
+    <Compile Include="Model\AutoTypeSettings.cs" />
+    <Compile Include="Model\KeyboardHook\Win32ErrorHandler.cs" />
+    <EmbeddedResource Include="View\ConfigurationWindow.resx">
       <DependentUpon>ConfigurationWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
