Started adding implementation for the buttons. Handling of changes done as well. Next step: debug keyboard hooks

--- a/AutoTyperGUI/AutoTyperGUI.csproj
+++ b/AutoTyperGUI/AutoTyperGUI.csproj
@@ -68,6 +68,7 @@
   <ItemGroup>
     <Compile Include="Model\AutoTyper.cs" />
     <Compile Include="Model\Chunk.cs" />
+    <Compile Include="Model\KeyboardHook\HotKey.cs" />
     <Compile Include="Model\KeyboardHook\KeyboardHook.cs" />
     <Compile Include="View\ChunkControl.cs">
       <SubType>UserControl</SubType>
